Pricing page screwed me

--- a/part2/vectacorp/index.html
+++ b/part2/vectacorp/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Welcome to Vecta Corporation</title>
+    <title>Welcome to Vecta Corporation</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <style>
+        p:not(:first-of-type)::first-line {
+            font-weight: bold;
+        }
+    </style>
 </head>
 
-<body style="width:960px;margin-left:20px;">
+<body>
 <img src="images/header.gif" alt="">
 <ul>
     <li><a href="index.html">Home</a></li>
