--- a/part2/vectacorp/contactus.html
+++ b/part2/vectacorp/contactus.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Contact Vecta Corporation</title>
+    <title>Contact Vecta Corporation</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 
-<body style="width:960px;margin-left:20px;">
+<body>
 <img src="images/header.gif" alt="">
 <ul>
     <li><a href="index.html">Home</a></li>
