--- a/part2/vectacorp/solutions.html
+++ b/part2/vectacorp/solutions.html
@@ -2,15 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Vecta Corporation's Products and Solutions</title>
+    <title>Vecta Corporation's Products and Solutions</title>
+    <link href="styles/style.css" rel="stylesheet">
 </head>
 
-<body style="width:960px;margin-left:20px;">
+<body>
 <img src="images/header.gif" alt="">
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="aboutus.html">About Us</a></li>
     <li><a href="solutions.html">Solutions</a></li>
+    <li>
+        <ul>
+            <li><a href="#vprospect">vProspect 2.0</a></li>
+            <li><a href="#vconvert">vConvert 2.0</a></li>
+            <li><a href="#vretain">vRetain 1.0</a></li>
+        </ul>
+    </li>
     <li><a href="pricing.html">Pricing</a></li>
     <li><a href="contactus.html">Contact Us</a></li>
 </ul>
